<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Translator</string>
    <string name="enter_text">Enter text</string>
    <string name="hint_input">Type something to translate…</string>
    <string name="translate">Translate</string>
    <string name="translation">Translation</string>
    <string name="clear">Clear</string>
    <string name="copy">Copy</string>
    <string name="swap_languages">Swap languages</string>
    <string name="error_empty_text">Please enter some text</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
</resources>
